# cinemaabyss

./: .gitignore  Makefile  Project_template.md  docker-compose.yml
.github/workflows/: docker-build-push.yml
info/schemas/: group-systems.dsl  systems.dsl
src/kubernetes/: circuit-breaker-config.yaml  configmap.yaml  dockerconfigsecret.yaml  events-service.yaml  ingress.yaml  monolith.yaml  movies-service.yaml  proxy-service.yaml
src/kubernetes/helm/: values.yaml
src/kubernetes/helm/templates/: configmap.yaml
src/kubernetes/helm/templates/services/: events-service.yaml  monolith.yaml  proxy-service.yaml
src/microservices/events/: Dockerfile  main.py  pyproject.toml
src/microservices/events/src/: api.py  events.py  schemas.py  settings.py  stream.py  utils.py
src/microservices/proxy/: Dockerfile  entrypoint.sh  kong.yml
